<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_title">guestbook</string>
    <string name="sign_in_sub1">Let's get started! Your real local tour.</string>
    <string name="sign_in_step1">STEP 1</string>
    <string name="sign_in_step1_sub">Search your accommodations worldwide</string>
    <string name="sign_in_step2">STEP 2</string>
    <string name="sign_in_step2_sub">Enter your itinerary</string>
    <string name="sign_in_step3">STEP 3</string>
    <string name="sign_in_step3_sub">Enjoy chatting with your next door travelers</string>
    <string name="sign_in_sub2">Set the search zone yourself to connect\r\nwith other in-zone travelers</string>
    <string name="sign_in_sub3">Also, search most visited spots in your neighborhood Never miss where you're supposed to be</string>

</resources>
