<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="42dp"
        android:text="@string/sign_in_title" />

    <TextView
        style="@style/sign_in_sub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="11dp"
        android:text="@string/sign_in_sub1" />

    <ImageView
        android:layout_width="5dp"
        android:layout_height="35dp"
        android:paddingTop="30dp"
        android:src="#c5c5c6" />

    <ImageView
        android:layout_width="5dp"
        android:layout_height="20dp"
        android:paddingTop="15dp"
        android:src="#c5c5c6" />

    <TextView
        style="@style/sign_in_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/sign_in_step1" />

    <TextView
        style="@style/sign_in_step1_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/sign_in_step1_sub" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="239dp"
        android:paddingTop="27dp"
        android:src="@drawable/sign_in_img_1" />
</LinearLayout>
